--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,7 @@ dependencies:
   firebase_auth: ^3.0.1
   firebase_core: ^1.3.0
   cloud_firestore: ^2.4.0
-  modal_progress_hud: ^0.1.3
-  flutter_local_notifications: ^8.1.1
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-0
   rxdart: ^0.27.1
   firebase_analytics: ^8.0.0
   grouped_buttons: ^1.0.4
@@ -40,7 +39,8 @@ dependencies:
   html: ^0.15.0
   url_launcher: ^6.0.9
   curved_navigation_bar: ^1.0.1
-  flutter_statusbarcolor: ^0.2.3
+  google_fonts: ^2.1.0
+
 
 dev_dependencies:
   flutter_test:
